examples/resources/deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-deployment
  labels:
    project: dev-dashboard
spec:
  ports:
    - port: 80
      name: web
  selector:
    app: nginx-deployment
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
  labels:
    project: dev-dashboard
spec:
  replicas: 3
  selector:
    matchLabels:
      app: nginx-deployment
  template:
    metadata:
      labels:
        app: nginx-deployment
    spec:
      containers:
        - name: nginx
          image: nginx:1.13.6
          ports:
            - containerPort: 80
